# HaskellRT

./: .gitignore  .hlint.yaml  CHANGELOG.md  GHC-optimization-args.md  HaskellRT.cabal  cabal.project
.github/workflows/: workflow.yml
app/: Camera.hs  Color.hs  HitRecord.hs  Hittable.hs  Interval2D.hs  Main.hs  Point.hs  Ray.hs  Renderer.hs  Sphere.hs  Triplet.hs  UnitVector.hs  Vector.hs  Viewport.hs  World.hs
